# cpp_optional_extras

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
include/rvarago/optional_extras/: algorithm.hpp  all.hpp  wrapper.hpp
include/rvarago/std_optional_extras/: all.hpp
test/: CMakeLists.txt  algorithm_test.cpp  main.cpp  wrapper_test.cpp
